[package]
name = "bsearch"
version = "0.1.0"
description = "Search Tool"
authors = ["you"]
edition = "2021"

[lib]
name = "bsearch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
winreg = "0.11"
image = "0.24"
windows = { version = "0.60.0", features = [
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_System_Ole",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi"
] }
serde_json = "1"
global-hotkey = "0.2"
walkdir = "2.3"
fuzzy-matcher = "0.3"
dirs = "5.0"
open = "5.0"
base64 = "0.22"
mime_guess = "2.0"
rayon = "1.10"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
